# Boxer-Chris

./: .gitignore  CMakeLists.txt  README.md  anim.py  camera_demo.py  camera_demo2.py  charuco.py  cviceni.py  demo.py  demo_image.py  demo_motion.py  hsv.py  image_demo.py  image_processing.py  images_demo.py  jans-tests.py  jans_tests.py  main.py  motion2.py  package.xml  playground.py  requirements.txt  test.py  test_getposition.py  test_gotoposition.py
b3b33rob_ros/: package.xml
b3b33rob_ros/cmake/: b3b33rob_rosConfig.cmake
b3b33rob_ros/launch/: camera.launch  schunk_meg64.launch  start_fake_rv6s.launch  start_fake_rv6sdl.launch  start_rv6s.launch  start_rv6sdl.launch
b3b33rob_ros/scripts/: test_gripper.py  test_trajectory.py
catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
conf/: calibration.yaml  camera.yaml  colors.yaml  detection.yaml  hsv_limits.yaml  main.yaml  motion.yaml  transform_test.npz  transformation.npz
kinematics_6dof/: package.xml
kinematics_6dof/cmake/: kinematics_6dofConfig.cmake
kinematics_6dof_ros_pkg/: package.xml
kinematics_6dof_ros_pkg/cmake/: kinematics_6dof_ros_pkg-msg-extras.cmake  kinematics_6dof_ros_pkg-msg-paths.cmake  kinematics_6dof_ros_pkgConfig.cmake
kinematics_6dof_ros_pkg/docs/: kinematics_6dof_ros_pkg.aux  kinematics_6dof_ros_pkg.out  kinematics_6dof_ros_pkg.tex
kinematics_6dof_ros_pkg/launch/: kinematics_6dof.launch
kinematics_6dof_ros_pkg/srv/: changeKinematicsConfig.srv
mitsubishi_arm_config/: package.xml
mitsubishi_arm_config/cmake/: mitsubishi_arm_configConfig.cmake
mitsubishi_arm_config/config/: controllers.yaml  controllers_pg70.yaml  joint_limits_rv_6s.yaml  joint_limits_rv_6sdl.yaml  joint_limits_rv_6sdl_pg70.yaml  kinematics.yaml  kinematics_rv_6s.yaml  kinematics_rv_6sdl.yaml  kinematics_rv_6sdl_pg70.yaml  mitsubishi_arm.srdf  mitsubishi_arm_pg70.srdf  (+1 more)
mitsubishi_arm_control/: package.xml
mitsubishi_arm_control/cmake/: mitsubishi_arm_controlConfig.cmake
mitsubishi_arm_control/config/: mitsubishi_arm_control.yaml
mitsubishi_arm_control/launch/: mitsubishi_arm_control.launch
mitsubishi_arm_description/: package.xml
mitsubishi_arm_description/cmake/: mitsubishi_arm_descriptionConfig.cmake
mitsubishi_arm_description/collision/: eye_collision.stl
mitsubishi_arm_description/collision/rv-6s/: rv-6s_base.stl  rv-6s_disc.stl  rv-6s_elbow.stl  rv-6s_joint_arm.stl  rv-6s_no1arm.stl  rv-6s_shoulder.stl  rv-6s_wrist.stl
mitsubishi_arm_description/launch/: .robot_parameters.launch.swp  display.launch
mitsubishi_arm_description/meshes/: eye.stl
mitsubishi_arm_description/meshes/rv-6s/: rv-6s_base.stl  rv-6s_cage.stl  rv-6s_elbow.stl  rv-6s_joint_arm.stl  rv-6s_no1arm.stl  rv-6s_shoulder.stl  rv-6s_table.stl
mitsubishi_arm_description/meshes/rv-6sdl/: cage.FCStd  cage.stl  rv-6sdl_disc.stl  rv-6sdl_table.stl  rv-6sdl_wrist.stl  table.FCStd  table.stl
mitsubishi_arm_description/robots/: mitsubishi_rv_6s.urdf.xacro  mitsubishi_rv_6sdl.urdf.xacro  mitsubishi_rv_6sdl_pg70.urdf.xacro
mitsubishi_arm_description/urdf/: mitsubishi_rv_6s_arm.xacro  mitsubishi_rv_6sdl_arm.xacro
mitsubishi_arm_hardware_interface/: package.xml
mitsubishi_arm_kinematics/: package.xml
mitsubishi_arm_launch/: package.xml
mitsubishi_arm_launch/cmake/: mitsubishi_arm_launchConfig.cmake
mitsubishi_arm_launch/launch/: .start_fake_robot.launch.swo  .start_fake_robot.launch.swp  kinematics_calc.launch  start_fake_robot.launch  start_robot.launch
mitsubishi_arm_student_interface/: package.xml
mitsubishi_arm_student_interface/cmake/: mitsubishi_arm_student_interfaceConfig.cmake
mitsubishi_arm_student_interface/scripts/mitsubishi_arm_student_interface/: .mitsubishi_robots.py.swp  mitsubishi_robots.html  mitsubishi_robots.py
schunk_pg70/: package.xml
schunk_pg70_hardware_interface/: package.xml
schunk_pg70_hardware_interface/cmake/: schunk_pg70_hardware_interfaceConfig.cmake
schunk_pg70_hardware_interface/config/: hw_int_config.yaml  pg70_control.yaml
schunk_pg70_hardware_interface/launch/: schunk_pg70_hardware_interface.launch
src/: CRS_commander.py  __init__.py  calibration.py  cviceni.py  detection.py  graph.py  image.py  motion.py  objects.py  planning.py  rgb_graph.py  robCRSdkt.py  robCRSikt.py  robotCRS.py  squares.py  visualization.py
(+53 files in other folders)
