<?xml version="1.0"?>
<package>
  <name>mitsubishi_arm_control</name>
  <version>0.0.0</version>
  <description>The mitsubishi_arm_control package</description>

  <maintainer email="chaloto3@fel.cvut.cz">Tomas Chaloupecky</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>

</package>
