<?xml version="1.0"?>
<package>
  <name>mitsubishi_arm_description</name>
  <version>0.0.0</version>
  <description>The mitsubishi_description package</description>

  <maintainer email="chaloto3@fel.cvut.cz">Tomas Chaloupecky</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
