<?xml version="1.0"?>
<package format="2">
  <name>mitsubishi_arm_launch</name>
  <version>0.0.0</version>
  <description>The mitsubishi_arm_launch package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <author email="libor.wagner@cvut.cz">Libor Wagner</author>
  <maintainer email="chaloto3@fel.cvut.cz">Tomas Chaloupecky</maintainer>


  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
